--- a/chatpdf/package.json
+++ b/chatpdf/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare:data": "tsx -r dotenv/config ./src/scripts/pinecone-prepare-docs.ts"
   },
   "dependencies": {
     "@pinecone-database/pinecone": "^1.1.2",
@@ -17,9 +18,12 @@
     "ai": "^2.2.24",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dotenv": "^16.3.1",
+    "langchain": "^0.0.192",
     "lucide-react": "^0.292.0",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
+    "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
@@ -37,6 +41,7 @@
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
+    "tsx": "^4.1.4",
     "typescript": "^5"
   }
 }
