--- a/chatpdf/.env
+++ b/chatpdf/.env
@@ -1,7 +1,7 @@
-OPENAI_API_KEY=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
+OPENAI_API_KEY=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
 PINECONE_API_KEY=e64f26a9-b32b-40c7-807d-0f0028d1e0b2
 PINECONE_ENVIRONMENT=gcp-starter
 PINECONE_INDEX_NAME=chatpdf
 PINECONE_NAME_SPACE=my-first-namespace
-PDF_PATH=./docs/bac-missing-cat.pdf
+PDF_PATH="./docs/german-basic-law.pdf"
 INDEX_INIT_TIMEOUT=24000
